Forenklet beregningsregler, refaktorert kode og lagt til tester